Oauth2 impl (#49)
* refactor: removed auth endpoints

* feat: implemented oauth2 support

* docs: updated docs to reflect auth integration

* refactor: reworked oauth2 impl
